[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "layerconf"
version = "0.0.1"
description = "Deterministic, multi-source configuration management with validation, provenance tracking, and hot-reloading"
readme = "README.md"
requires-python = ">=3.10.12"
license = { text = "MIT" }
keywords = ["configuration", "config", "settings", "validation", "layering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage     = "https://github.com/ancientpatata/layer"
Repository   = "https://github.com/ancientpatata/layer"
Documentation = "https://ancientpatata.github.io/layer/"
"Bug Tracker" = "https://github.com/ancientpatata/layer/issues"
Changelog    = "https://github.com/ancientpatata/layer/blob/main/CHANGELOG.md"

[project.optional-dependencies]
watch  = ["watchdog>=4.0"]
dotenv = ["python-dotenv>=1.0"]
aws    = ["boto3>=1.34"]
vault  = ["hvac>=2.0"]
dev    = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.9"]
docs   = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.25", "mkdocs-autorefs>=1.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/layer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.semantic_release]
version_toml          = ["pyproject.toml:project.version"]
branch                = "main"
changelog_file        = "CHANGELOG.md"
build_command         = "uv build"
upload_to_pypi        = false
upload_to_vcs_release = true

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "style", "test", "docs", "chore", "ci", "build"]
minor_tags   = ["feat"]
patch_tags   = ["fix", "perf"]
